assets/css/stylesheet.css
/* ... */
.nav-button::before {
    top: 3px;
    -webkit-transform: rotate(90deg);       
    -ms-transform: rotate(90deg);           
    transform: rotate(90deg);
    background-color: var(--header-text-color);
}

.nav-button::after {
    top: -3px;
    -webkit-transform: rotate(-90deg);       
    -ms-transform: rotate(-90deg);           
    transform: rotate(-90deg);   
    background-color: var(--header-text-color);
}

.open.nav-button::before {
    top: 0px;
    -webkit-transform: rotate(-45deg);       
    -ms-transform: rotate(-45deg);           
    transform: rotate(-45deg);
}

.open.nav-button::after {
    top: 0px;
    -webkit-transform: rotate(45deg);       
    -ms-transform: rotate(45deg);           
    transform: rotate(45deg);
}

/*_________________________________Navigation______________________________________________*/

.navigation-dropdown {
    position: relative;
    z-index: 2;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    transition: all 0.25s;
    border: 0;
    opacity: var(--opacity);
}

.nav-open {
    visibility: visible;
    height: 4.0vh;
    font-size: var(--nav-menu-font-size);
}

.nav-hidden {
    visibility: hidden;
    height: 0vh;
    font-size: 0;
}

.nav-element {
    margin: 0;
    padding: var(--nav-menu-link-padding);
    white-space: nowrap;
    text-decoration: none;
    color: var(--header-text-color);
}

.nav-element p:hover {
    cursor: pointer;
    color: var(--header-text-hover);
}

/*_______________________Main______________________________*/

#main {
    z-index: 1;
    position: relative;
    display: block;
    top: var(--header-height);
    height: fit-content;
}

.section {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    height: fit-content;
    padding-bottom: 3%;
}

.section-container {
    width: var(--content-width);
    text-align: center;
}

.section-header {
    font-size: 4.5vmax;
    letter-spacing: 0.2vmax;
    font-weight: 1;
    margin-top: 2vmax;
    margin-bottom: 2vmax;
    display: inline-block;
}

/*------------ Featured Content ----------------------------*/
#featured-container {
    z-index: 1;
    padding-top: 4vh;
    min-height: 87.1vh;
    width: 100%;
    height: fit-content;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    text-align: center;
}

#featured-content {
    margin-top: var(--featured-container-top-margin);
    width: fit-content;
    height: fit-content;
    padding: 2vh 2vw;
}

#featured-content h2 {
    font-size: 7vmax;
    margin-top: 0;
    margin-bottom: 1vh;
    font-weight: normal;
    letter-spacing: 0.6vmax;
}

#featured-content a {
    text-decoration: none;
    margin-right: 5%;
    margin-left: 5%;
    padding: 2% 5%;
    border: black solid 0.35vmax;
    color: black;
    transition: all .25s;
}

#featured-content a:hover {
    color: white;
    border-color: white;
    border-radius: 20px;
}

#featured-content h4 {
    cursor: pointer;
    font-size: 2.5vmax;
    margin-top: 0;
    margin-bottom: 0;
    font-weight: normal;
}

#featured-content-links {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: fit-content;
}

/* ---------- Discography/Music ----------------------------*/
#music-container {
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    height: fit-content;
}

.album-container {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    width: var(--album-image-width);
    margin: 1.5% var(--album-image-margin);
}

.album {
    width: 100%;
    cursor: pointer;
    border: 0.5px black solid;
}

.album:hover{
    opacity: 0.9;
}

.music-player {
    transition: height 0.2s;
}

.expand-music-arrow {
    margin: 1% 2% 0% 0%;
    cursor: pointer;
    position: relative;
    display: flex;
    align-items: flex-start;
    justify-content: center;
    text-align: center;
    height: 30px;
    width: 100%;
    opacity: 1;
}

.expand-music-arrow::before, .expand-music-arrow::after {
    margin-top: 1%;
    content: "";
    width: 0.2rem;
    height: 25%;
}

.expand-music-arrow::before {
    -webkit-transform: rotate(-45deg);       
    -ms-transform: rotate(-45deg);           
    transform: rotate(-45deg);
    background-color: black;
}

.expand-music-arrow::after {
    -webkit-transform: rotate(45deg);       
    -ms-transform: rotate(45deg);           
    transform: rotate(45deg);   
    background-color: black;
}

.music-expanded.expand-music-arrow::before {
    -webkit-transform: rotate(45deg);       
    -ms-transform: rotate(45deg);           
    transform: rotate(45deg);
}

.music-expanded.expand-music-arrow::after {
    -webkit-transform: rotate(-45deg);       
    -ms-transform: rotate(-45deg);           
    transform: rotate(-45deg);
}

/* ---------- Videos ---------------------------------------*/

#visuals-container {
    width: var(--video-container-width);
    text-align: center;
}

#video-container {
    padding-bottom: 56.25%;
    position: relative;
    height: 0;
    overflow: hidden;
}

.video {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    height: 100%;
    width: 100%;
    border: black 1px solid;
}

.current-video {
    visibility: visible;
}

.hidden-video {
    visibility: hidden;
}

.video-nav {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: fit-content;
    margin-top: 2%;
}

.video-nav-circle {
    cursor: pointer;
    height: 1.15vmax;
    width: 1.15vmax;
    background-color: white;
    opacity: 0.7;
    border-radius: 50%;
    border: 1.5px solid black;
    margin: 0% 0.5%;
}

.current-video-button, .video-nav-circle:hover {
    opacity: 1;
}
/* ... */

